--- a/src/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Create.cshtml
@@ -1,4 +1,29 @@
-﻿@{
-    ViewData["Title"] = "Isabella Bird Blog - People";
+﻿@model GummiBearKingdom.Models.Product
+@{
+    ViewData["Title"] = "GummiBear Kingdom - New Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>Add New Product</h2>
+<hr />
+@using (Html.BeginForm())
+{
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name)
+        @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Country of Origin")
+        @Html.TextBoxFor(model => model.CountryOfOrigin, new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Cost)
+        @Html.TextBoxFor(model => model.Cost, new { @class = "form-control", @type = "decimal" })
+    </div>
+
+
+    <input type="submit" value="Add new location" class="btn btn-primary" />
+}
+<p>@Html.ActionLink("Back to products", "Index")</p>
