Add product list to Index page

--- a/src/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model GummiBearKingdom.Models.Product
+﻿@model IEnumerable<GummiBearKingdom.Models.Product>
 
 @{
     ViewData["Title"] = "Isabella Bird Blog - People";
