Create edit product page

--- a/src/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Create.cshtml
@@ -24,6 +24,6 @@
     </div>
 
 
-    <input type="submit" value="Add new location" class="btn btn-primary" />
+    <input type="submit" value="Save New Product" class="btn btn-primary" />
 }
 <p>@Html.ActionLink("Back to products", "Index")</p>
