Create delete product page

--- a/src/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<GummiBearKingdom.Models.Product>
 
 @{
-    ViewData["Title"] = "Isabella Bird Blog - People";
+    ViewData["Title"] = "GummiBear Kingdom - Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
