--- a/src/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -1,4 +1,16 @@
-﻿@{
-    ViewData["Title"] = "Isabella Bird Blog - People";
+﻿@model GummiBearKingdom.Models.Product
+
+@{
+    ViewData["Title"] = "GummiBearKingdom - Delete Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>Delete @Html.DisplayFor(model => model.Name)</h2>
+<p>Are you sure you want to delete @Html.DisplayFor(model => model.Name)?</p>
+
+@using (Html.BeginForm())
+{
+<input type="submit" value="Delete" />
+}
+
+@Html.ActionLink("Back to products", "Index")
