--- a/src/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Home/Index.cshtml
@@ -1,8 +1,23 @@
 ﻿@{
     ViewData["Title"] = "Isabella Bird Blog - People";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
 <div class="jumbotron header">
+
+</div>
+
+<div class="jumbotron pane-1">
+
+</div>
+<div class="jumbotron pane-2">
+    <div class="container">
+        <div class="col-md-6">
+            <img src="~/images/gummyworms.gif" />
+        </div>
+        <div class="col-md-6">
+<p>text goes here</p>
+        </div>
+    </div>
 
 </div>
