--- a/src/GummiBearKingdom/wwwroot/css/styles.css
+++ b/src/GummiBearKingdom/wwwroot/css/styles.css
@@ -1,2 +1,46 @@
-﻿body {
+﻿.header{
+    background-image: url("/images/gummies1.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 500px; 
+}
+
+.pane-1 {
+    background-image: url("/images/candyright.jpg");
+    background-position-x: right;
+    background-position-y: center;
+    background-size: 600px;
+    background-repeat: no-repeat;
+    background-color: #fafbf6;
+    height: 350px;
+}
+
+.pane-2 {
+    background-color: #fff;
+    height: 350px;
+    border: 2px solid green;
+    padding: 0;
+}
+
+.pane-2 div.container {
+    width: 80%;
+    height: 100%;
+    padding: 0;
+}
+
+.pane-2 div.col-md-6:first-of-type {
+    position: relative;
+    height: 100%;
+}
+
+.pane-2 div.col-md-6 img {
+    /*height: 100%;*/
+    width: auto;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.jumbotron {
+    margin: 0;
 }
