Add navbar, position elements in header

--- a/src/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Home/Index.cshtml
@@ -8,7 +8,14 @@
 </div>
 
 <div class="jumbotron pane-1">
-
+    <div class="container">
+        <div class="col-md-6">
+            <p>text goes here</p>
+        </div>
+        <div class="col-md-6">
+            <img src="~/images/gummies2.jpg" />
+        </div>
+    </div>
 </div>
 <div class="jumbotron pane-2">
     <div class="container">
@@ -16,8 +23,7 @@
             <img src="~/images/gummyworms.gif" />
         </div>
         <div class="col-md-6">
-<p>text goes here</p>
+    <p>text goes here</p>
         </div>
     </div>
-
 </div>
