--- a/src/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -7,7 +7,10 @@
     <title>GummiBear Kingdom</title>
 </head>
 <body>
+    <div class="page-header">
     <h2>GummiBear Kingdom</h2>
+
+    </div>
     <div class="container">
         @RenderBody()
     </div>
