--- a/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
@@ -7,7 +7,24 @@
     <title>GummiBear Kingdom</title>
 </head>
 <body>
-    <h2>GummiBear Kingdom</h2>
+    <div class="layout-header">
+        <div class="container">
+            <div class="center-master">
+                <img src="~/images/Gummi_Bear-icon.png" />
+                <h2>GummiBear Kingdom</h2>
+            </div>
+        </div>
+    </div>
+    <nav class="navbar">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                <li><a href="#">Filler Link</a></li>
+                <li><a href="#">Filler Link</a></li>
+                <li><a href="#">Filler Link</a></li>
+            </ul>
+        </div>
+    </nav>
         @RenderBody()
 </body>
 </html>
