--- a/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
@@ -22,6 +22,7 @@
                 <li><a href="#">Filler Link</a></li>
                 <li><a href="#">Filler Link</a></li>
                 <li><a href="#">Filler Link</a></li>
+                <li><a href="#">Filler Link</a></li>
             </ul>
         </div>
     </nav>
