--- a/src/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Home/Index.cshtml
@@ -10,7 +10,9 @@
 <div class="jumbotron pane-1">
     <div class="container">
         <div class="col-md-6">
-            <p>text goes here</p>
+            <h2>Gummy Bears</h2>
+            <p>All of your favorite brands and more</p>
+            <p>@Html.ActionLink("Shop now", "Index", "Products", null, new { @class = "btn btn-default btn-lg" })</p>
         </div>
         <div class="col-md-6">
             <img src="~/images/gummies2.jpg" />
@@ -23,7 +25,9 @@
             <img src="~/images/gummyworms.gif" />
         </div>
         <div class="col-md-6">
-    <p>text goes here</p>
+            <h2>Other Gummies and Chewies</h2>
+            <p>Worms, burgers, stars, bottles, fish, people</p>
+            <p>@Html.ActionLink("Shop now", "Index", "Products", null, new { @class = "btn btn-default btn-lg" })</p>
         </div>
     </div>
 </div>
