Add footer to homepage

--- a/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
@@ -27,5 +27,52 @@
         </div>
     </nav>
         @RenderBody()
+
+    <footer>
+        <div class="container">
+            <div class="col-md-3">
+                <span class="footer-heading">Information</span>
+                <ul class="footer-links list-unstyled">
+                    <li><a href="#">Longest Filler Link</a></li>
+                    <li><a href="#">Middle Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Longest Filler Link</a></li>
+                    <li><a href="#">Middle Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Middle Filler Link</a></li>
+                    <li><a href="#">Middle Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <span class="footer-heading">Why Buy From Us</span>
+                <ul class="footer-links list-unstyled">
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <span class="footer-heading">My Account</span>
+                <ul class="footer-links list-unstyled">
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <span class="footer-heading">Follow Us</span>
+                <ul class="footer-links list-unstyled">
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
