Stick footer to bottom of page

--- a/src/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Isabella Bird Blog - People";
+    ViewData["Title"] = "GummiBear Kingdom";
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
@@ -25,7 +25,7 @@
             <img src="~/images/gummyworms.gif" />
         </div>
         <div class="col-md-6">
-            <h2>Other Gummies and Chewies</h2>
+            <h2>Other Gummies and Chews</h2>
             <p>Worms, burgers, stars, bottles, fish, people</p>
             <p>@Html.ActionLink("Shop now", "Index", "Products", null, new { @class = "btn btn-default btn-lg" })</p>
         </div>
