--- a/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
@@ -7,72 +7,79 @@
     <title>GummiBear Kingdom</title>
 </head>
 <body>
-    <div class="layout-header">
-        <div class="container">
-            <div class="center-master">
-                <img src="~/images/Gummi_Bear-icon.png" />
-                <h2>GummiBear Kingdom</h2>
+    <div class="content">
+        <div class="layout-header">
+            <div class="container">
+                <div class="center-master">
+                    <img src="~/images/Gummi_Bear-icon.png" />
+                    <h2>@Html.ActionLink("GummiBear Kingdom", "Index", "Home")</h2>
+                </div>
             </div>
         </div>
-    </div>
-    <nav class="navbar">
-        <div class="container">
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Products", "Index", "Products")</li>
-                <li><a href="#">Filler Link</a></li>
-                <li><a href="#">Filler Link</a></li>
-                <li><a href="#">Filler Link</a></li>
-                <li><a href="#">Filler Link</a></li>
-            </ul>
-        </div>
-    </nav>
+        <nav class="navbar">
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                    <li><a href="#">Filler Link</a></li>
+                </ul>
+            </div>
+        </nav>
         @RenderBody()
+    </div>
+        <footer>
+            <div class="container">
+                <div class="col-md-3">
+                    <span class="footer-heading">Information</span>
+                    <ul class="footer-links list-unstyled">
+                        <li><a href="#">Longest Filler Link</a></li>
+                        <li><a href="#">Middle Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Longest Filler Link</a></li>
+                        <li><a href="#">Middle Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Middle Filler Link</a></li>
+                        <li><a href="#">Middle Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <span class="footer-heading">Why Buy From Us</span>
+                    <ul class="footer-links list-unstyled">
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <span class="footer-heading">My Account</span>
+                    <ul class="footer-links list-unstyled">
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <span class="footer-heading">Follow Us</span>
+                    <ul class="footer-links list-unstyled">
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                        <li><a href="#">Filler Link</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <footer class="sticky-footer">
+            <div class="container">
+                <span>@Html.ActionLink("Admin", "Create", "Products")</span>
+            </div>
+        </footer>
 
-    <footer>
-        <div class="container">
-            <div class="col-md-3">
-                <span class="footer-heading">Information</span>
-                <ul class="footer-links list-unstyled">
-                    <li><a href="#">Longest Filler Link</a></li>
-                    <li><a href="#">Middle Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Longest Filler Link</a></li>
-                    <li><a href="#">Middle Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Middle Filler Link</a></li>
-                    <li><a href="#">Middle Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3">
-                <span class="footer-heading">Why Buy From Us</span>
-                <ul class="footer-links list-unstyled">
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3">
-                <span class="footer-heading">My Account</span>
-                <ul class="footer-links list-unstyled">
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3">
-                <span class="footer-heading">Follow Us</span>
-                <ul class="footer-links list-unstyled">
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                    <li><a href="#">Filler Link</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
