--- a/src/GummiBearKingdom/wwwroot/css/styles.css
+++ b/src/GummiBearKingdom/wwwroot/css/styles.css
@@ -1,4 +1,16 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+html {
+  height: 100vh;
+}
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -12,7 +24,7 @@ body {
 /*HEADER*/
 
 .layout-header {
-    background-color: #00438f;
+    background-color: #144e90;
     color: white;
     text-transform: uppercase;
     min-height: 100px;
@@ -28,12 +40,22 @@ body {
     bottom: -25px;
 }
 
+.layout-header a {
+    color: white;
+}
+
+.layout-header a:hover, .layout-header a:focus {
+    background-color: transparent;
+    color: #f1d500; /*YELLOW*/
+    text-decoration: none;
+}
+
 /*NAVBAR*/
 
 nav.navbar {
     border-radius: 0;
     margin: 0;
-    background-color: #00438f;
+    background-color: #144e90;
     text-transform: uppercase;
     font-weight: 700;
 }
@@ -147,7 +169,7 @@ div.col-md-6 {
 /*FOOTER*/
 
 footer {
-    background-color: #00438f; /*BLUE*/
+    background-color: #144e90; /*BLUE*/
     padding-top: 34px;
     color: white;
     font-weight: 700;
@@ -180,3 +202,24 @@ footer a:hover, footer a:focus {
 footer ul {
     margin-top: 12px;
 }
+
+/*STICKY FOOTER*/
+
+footer.sticky-footer > .container {
+    padding: 0;
+}
+
+footer.sticky-footer {
+    background-color: #19406d;
+}
+
+footer.sticky-footer {
+    padding-top: 15px;
+    height: 50px;
+}
+
+footer.sticky-footer span{
+    float: right;
+    text-transform: uppercase;
+}
+
