--- a/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_HomeLayout.cshtml
@@ -8,6 +8,16 @@
 </head>
 <body>
     <div class="content">
+        <nav class="sticky-header navbar">
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">My Wishlist</a></li>
+                    <li><a href="#">Checkout</a></li>
+                    <li><a href="#">Log In</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="layout-header">
             <div class="container">
                 <div class="center-master">
